nlw/share/skin/s3/css/screen.css
@import url('styles.css');
@import url('../../wikiwyg/css/lightbox.css');

/* overloads */

html body {
    line-height: normal;
}

body#blog div#controls div#controlsRight, div#st-editing-tools-edit {
    width: auto !important;
}

div#contentColumns div#contentLeft {
    overflow: auto !important;
}

/* {bz: 1459}: Safari needs overflow-y:hidden to hide the vertical scrollbar */
body div#contentColumns div#contentLeft {
    overflow-x: auto !important;
    overflow-y: hidden !important;
}

div#contentColumns.hidebox #contentLeft {
    width: 97%;
}

div#contentColumns #contentRight {
    background-color: inherit;
}

div#contentColumns.hidebox #contentRight {
    display: none;
}

div#contentColumns.showbox #contentRight {
    display: block;
}

#st-wikinav-profile {
    float: none !important;
}

div#header div#globalNav {
    padding: 8px 0px;
    margin: 0px;
    width: auto !important;
    white-space: nowrap;
}

div#controls div#controlsRight ul li a.watch.on {
       background: url(../images/watchingIcon.png) no-repeat center left;
}

td.listview-watchlist {
    width: 200px;
}

td.listview-watchlist a.watch.on {
       background: url(../images/watchingIcon.png) no-repeat center left;
}

td.listview-watchlist a.watch:hover {
    color: #33A8FF;
}

td.listview-watchlist a.watch {
    background: url(../images/watchIcon.png) no-repeat center left;
    color: #333333;
    float: right;
    display: block;
    font-weight: bold;
    text-decoration: none;
    padding: 0 10px 0 28px;
    margin: 5px;
}


/* Hacks to get around there not being an avatar on the araucaria version */
body#dashBoard div#controls div#frame {
    float: left;
    margin: 7px 0 0 20px;
    background:none;
}
body#dashBoard div#controls div#frame img {
    margin: 3px 3px 0 0;
}
body#dashBoard div#controls span.welcome {
    margin-top: 14px;
    font-size: 12px;
    display: block;
    line-height: 16px;
    float: left;
    padding-left: 10px;
}

div#contentContainer {
    padding: 0 0 0px 20px;
}

table.dataTable td img.pageType {
    border: none;
    margin: 5px;
}
 
table.dataTable td img.avatar {
    float: none;
    margin: 5px;
    vertical-align: middle;
}

table.dataTable {
    width:98%;
}

table.dataTable span.summary strong {
    font-weight:bold;
    background:#ffc;
    padding:1px 2px;
}

div#bottomButtons {
    width: 100%;
}

div#bottomButtons ul.buttonRight {
    background: auto;
    height: auto;
    padding-left: auto;
}
div#bottomButtons img.avatar {
    vertical-align: middle;
}
 
div#bottomButtons div#pageAttribution {
    background: url(../images/controlsRightDivider.png) no-repeat center left;
    margin: 5px 5px 0 180px;
    padding: 5px;
}

body#workSpace div#controls div#st-editing-tools-edit h1,
body#blog div#controls div#st-editing-tools-edit h1,
div#contentContainer h2.tableTitle {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    padding-bottom: 2px;
}

div#contentContainer h2.tableTitle {
    width: 90%;
}

div#controls div#st-editing-tools-edit {
    max-width: 80%;
    display: block;
}

body#blog div#controls div#controlsRight {
    max-width: 20%;
}

div#controls div#st-editing-tools-edit {
    max-width: 80%;
}


div.goTo {
    white-space: nowrap;
}


div.widget ul.widgetButton li a.addTagButton {
    width: 87px;
}

div.wiki ol, div.wiki ul {
    padding-left: 25px;
}

div.wiki ol {
    list-style: decimal outside none;
}

div.wiki ul {
    list-style: disc outside none;
}

div.wiki ul ul, div.wiki ol ul {
    list-style-type: circle;
}

div.wiki ol ol ul, div.wiki ol ul ul, div.wiki ul ol ul, div.wiki ul ul ul {
    list-style-type: square;
}

div.wiki li {
    padding: 3px 0px;
}

div.wiki td, div.wiki th {
    vertical-align: top;
}
/* Done overloads */

#globalNav form {
    width: 400px;
    text-align: right;
}

ul.normal {
    list-style: disc;
    list-style-position: inside;
}

ul.normal ul {
    list-style: circle;
    list-style-position: inside;
    padding-left: 10px;
}

ul.normal ul ul {
    list-style: square;
    list-style-position: inside;
    padding-left: 20px;
}

#st-email-lightbox th {
    padding-right: 10px;
    vertical-align: middle;
}

#st-email-lightbox input {
    margin-left: 0px;
}

#st-email-lightbox .email_input {
    width: 250px;
}

#st-email-lightbox .email_input_button {
    width: 120px;
}

#st-email-lightbox .email_input_textarea {
    width: 640px;
}

#wikiwyg_wikitext_textarea {
    background-color: #FFFFDD !important;
}

/* Additional Settings styles */
#settingsPage td {
    padding: 4px;
}

#settingsPage th {
    padding: 4px;
    font-weight: bold;
}

#settingsPage dd {
    line-height: 1.2em;
    margin-bottom: 4px;
}

/* Additional People Profiles styles */
ul li a.followPersonButton {
    line-height: 16px;
    height: 22px;
    background: url(../images/followIcon.png) no-repeat top left;
    padding-left: 25px;
}

/* Wafl Boxes */

#st-page-content .wafl_container td {
    border: none;
    font-size: 1em;
}

.wafl_box {
    background: #F4F4F4 none repeat scroll 0%;
    border: 1px solid #AAAAAA;
    color: #000000;
    padding: 10px;
}

.wafl_box .wiki {
    margin: 0px;
    border: none;
}

.wafl_title {
    font-weight: bold;
    color: #000000;
    text-align: center;
    font-size: 1em;
}

.wafl_box ul {
    list-style-type: disc;
    padding-right: 10px;
}

/* Include page styles */

.wiki-include-edit-link {
    font-size: 10px;
    font-weight: normal;
}

.wiki-include-page {
    border-left: 1px solid #80a9f3;
    padding-left: 5px;
    padding-right: 10px;
    margin-left: 12px;
}

.wiki-include-title {
    font-size: 19px;
    font-weight: bold;
    margin-left: 6px;
    background: none;
}

.wiki-include-title a {
    text-decoration: none;
    color: blue;
}

.wiki-include-title a:hover {
    text-decoration: underline;
}

div.wiki-include-content {
    margin-left: 6px;
}
/* ... */

